# timelog

./: .coverage  .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  LICENSE  ONE_PAGER.md  README.md  clang_tidy_wrapper  coverage.xml  pyproject.toml  run_clang_tidy.bat  run_tidy.sh  tl_compaction.plist
.github/workflows/: benchmark-methodology-main.yml  benchmark-methodology-pr.yml  codeql.yml  correctness-e2e-main.yml  correctness-e2e-pr.yml  coverage.yml  dependency-review.yml  docs-check.yml  formal-trace.yml  packaging-pr.yml  release-pypi.yml  release-testpypi.yml  sanitizers.yml  tests-pr.yml
bindings/cpython/: CMakeLists.txt
bindings/cpython/build-test/: CTestTestfile.cmake  timelog_python.slnx
bindings/cpython/include/timelogpy/: py_compat.h  py_errors.h  py_handle.h  py_iter.h  py_span.h  py_span_iter.h  py_span_objects.h  py_timelog.h
bindings/cpython/src/: module.c  py_errors.c  py_handle.c  py_iter.c  py_span.c  py_span_iter.c  py_span_objects.c  py_timelog.c
bindings/cpython/tests/: test_py_errors.c  test_py_handle.c  test_py_iter.c  test_py_main.c  test_py_maint_b5.c  test_py_span.c  test_py_timelog.c
build-asan/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja
build-clang/: CTestTestfile.cmake  timelog.slnx
build-debug/: CTestTestfile.cmake  timelog.slnx
build-test/: CTestTestfile.cmake  timelog.slnx
build-tsan/: CTestTestfile.cmake  timelog.slnx
combined_sources/: bindings.c  bindings.h  delta.c  delta.h  delta_new.c  delta_new.h  internal.c  internal.h  internal_new.c  internal_new.h  maint.c  maint.h  maint_new.c  maint_new.h  query.c  query.h  query_new.c  query_new.h  storage.c  storage.h  storage_new.c  storage_new.h  timelog_new.h
core/src/: tl_timelog.c
core/tests/: test_adaptive_internal.c  test_api_semantics.c  test_compaction_internal.c  test_concurrency.c  test_delta_internal.c  test_functional.c  test_internal_data_structures.c  test_internal_sync.c  test_invariants.c  test_main.c  test_pagespan_iter.c  test_snapshot_lifetime.c  test_storage_internal.c  test_stress.c
demo/: adaptive_segmentation_demo.c  benchmark_baseline.py  benchmark_models.py  benchmark_profiles.py  benchmark_report.py  benchmark_runner.py  benchmark_scenarios.py  benchmark_schema.py  correctness_checker.py  correctness_ci.py  correctness_log_test.jsonl  debug_reinsert.py  hft_synthetic.py  ooo_profiler.py  rolling_retention_demo.py  timelog_benchmark.py  timelog_demo.py  timelog_native_benchmark.c
demo/HFT_Data_Generator/: data_reader.ipynb  hft_data_generator.py  validate_hft_dataset.py
demo/benchmark_runs/: methodology_a6_dataset_check.md  methodology_a6_smoke.md  methodology_all_smoke.md  methodology_forward_smoke.md  methodology_full_Linux.md  methodology_pr.md
demo/ci/: check_docs_consistency.py  run_core_test_groups.py
demo/tests/: test_benchmark_baseline.py  test_benchmark_data_generation.py  test_benchmark_models.py  test_benchmark_scenarios.py  test_correctness_checker_ci.py  test_correctness_ci.py  test_hft_synthetic.py  test_timelog_demo_data_bootstrap.py
docs/: BENCHMARK_REPORT.md  CI_TESTS.md  PERFORMANCE_METHODOLOGY.md  SKILL_timelog_native_python_library_engineering.md  configuration.md  engineering_plan_B1.md  engineering_plan_B1_review.md  engineering_plan_B2_errata.md  engineering_plan_B2_pytimelog.md  engineering_plan_B2_review.md  engineering_plan_B3.md  engineering_plan_B3_review.md  engineering_plan_B4.md  engineering_plan_B5.md  engineering_plan_pagespan.md  errors-and-retry-semantics.md  getting-started.md  glossary.md  index.md  operations.md  performance.md  py_binding_b1_review.md  pypi-release.md  python-api.md  testing-and-ci.md  timelog_adaptive_segmentation_lld_c17.md  timelog_python_north_star_hld.md  timelog_v1_lld_B1_python_handle_lifetime.md  timelog_v1_lld_B2_pytimelog_engine_wrapper.md  timelog_v1_lld_B3_pytimelogiter_snapshot_iterator.md  timelog_v1_lld_B4_pagespan_zero_copy.md  timelog_v2_lld_B5_maintenance_threading_integration.md  timelog_v2_lld_B6_error_model_subsystem.md  timelog_v2_lld_B7_python_facade_subsystem.md  timelog_v2_lld_pagespan_core_api_unification.md  timelog_v2_lld_pagespan_cpython_bindings_update.md  what-is-timelog.md
docs/V1/: SKILL.md  timelog_one_pager.md  timelog_theoretical_minimum_advanced.md  timelog_v1_c_hld.md  timelog_v1_c_software_design_spec.md  timelog_v1_engineering_plan.md  timelog_v1_lld_background_maintenance.md  timelog_v1_lld_compaction_policy.md  timelog_v1_lld_read_path.md  timelog_v1_lld_storage_pages.md  timelog_v1_lld_write_path.md
docs/V2/: SKILL.md  timelog_one_pager.md  timelog_v2_c_hld.md  timelog_v2_c_software_design_spec.md  timelog_v2_engineering_plan.md  timelog_v2_lld_background_maintenance.md  timelog_v2_lld_compaction_policy.md  timelog_v2_lld_read_path.md  timelog_v2_lld_storage_pages.md  timelog_v2_lld_write_path.md
docs/internals/: hld.md
formal/: README.md  reference_model.py
formal/cbmc/: README.md  filter_harness.c  heap_harness.c  intervals_harness.c  page_harness.c
formal/tla/: Timelog_Abstract.cfg  Timelog_Abstract.tla  Timelog_Impl.cfg  Timelog_Impl.tla
formal/trace/: check_trace.py  schema.json
include/timelog/: timelog.h  tl_export.h
python/: .gitkeep
python/tests/: test_api_simplification.py  test_facade.py  test_ui_improvements.py
python/timelog/: __init__.py  _api.py
src/: tl_alloc.c  tl_atomic.c  tl_config.c  tl_intervals.c  tl_log.c  tl_recvec.c  tl_status.c  tl_thread.c  tl_timelog.c
src/delta/: tl_flush.c  tl_memrun.c  (+5 more)
tests/: test_alloc.c  test_api_semantics.c  test_compaction_internal.c  test_concurrency.c  test_diagnostics.c  test_flush.c  test_functional.c  test_harness.h  test_intervals.c  test_iter.c  test_main.c  test_maintenance.c  test_manifest.c  test_memtable.c  test_merge.c  test_page.c  test_pagespan_iter.c  test_phase0.c  test_phase1.c  test_phase2.c  test_phase3.c  test_phase4.c  test_phase5.c  test_phase6.c  test_phase8.c  test_phase9.c  test_read_path.c  test_recvec.c  test_segment.c  test_snapshot.c  test_snapshot_lifetime.c  test_status.c  test_storage_internal.c  test_stress.c
(+151 files in other folders)
